force-app/main/default/objects/Contact/fields/AcademicUser__c.field-meta.xml
<CustomField>
    <fullName>AcademicUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Academic User</label>
    <type>Checkbox</type>
</CustomField>