force-app/main/default/objects/Contact/fields/CreditCard__c.field-meta.xml
<CustomField>
    <fullName>CreditCard__c</fullName>
    <label>Credit Card</label>
    <length>16</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>