force-app/main/default/objects/Contact/fields/CreditCcv__c.field-meta.xml
<CustomField>
    <fullName>CreditCcv__c</fullName>
    <label>Credit Ccv</label>
    <length>3</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>