force-app/main/default/objects/Contact/fields/CreditExpire__c.field-meta.xml
<CustomField>
    <fullName>CreditExpire__c</fullName>
    <label>Credit Expire</label>
    <length>7</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>