force-app/main/default/objects/Contact/fields/ShippingFirstName__c.field-meta.xml
<CustomField>
    <fullName>ShippingFirstName__c</fullName>
    <label>Shipping First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>