force-app/main/default/objects/Contact/fields/ShippingPhone__c.field-meta.xml
<CustomField>
    <fullName>ShippingPhone__c</fullName>
    <label>Shipping Phone</label>
    <type>Phone</type>
</CustomField>